--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,6 @@
 	"features": {
 		"ghcr.io/devcontainers/features/azure-cli:1": {},
 		"ghcr.io/rchaganti/vsc-devcontainer-features/azurebicep:1": {},
-    		"ghcr.io/dhoeric/features/act:1": {},
-    		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+		"ghcr.io/dhoeric/features/act:1": {}
 	}
 }
