--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,29 @@ permissions:
   pull-requests: write
 
 jobs:
-  login:
-    name: 'login using az cli'
+  verify-Az-CLI:
+    name: 'verify the AZ CLI is installed'
     runs-on: ubuntu-latest
 
     steps:
-      # Make it conditional??
-      # .secrets file which you add to .gitignore
       - name: Install azure-cli
         uses: pietrobolcato/install-azure-cli-action@v1
 
       - name: Azure Version
         run: az --version
+      
+  deploy-bicep-template:
+    needs: verify-Az-CLI
+    name: 'Deploy resources using bicep'
+    runs-on: ubuntu-latest
+
+    steps:
+    # Each job needs it's own installation steps appearantly.
+    # Created app registration secret to log in
+      - name: Install azure-cli
+        uses: pietrobolcato/install-azure-cli-action@v1
+      
+      - name: 'Az CLI login'
+        run: az login --service-principal -u ${{secrets.AZURE_CLIENT_ID}} -p ${{secrets.CLIENT_SECRET}} --tenant ${{secrets.AZURE_TENANT_ID}}
+      
+      
